--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bondi</title>
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/bondi.css">
+    <link rel="stylesheet" href="./bondi/css/all.min.css">
+    <link rel="stylesheet" href="./bondi/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bondi/css/bondi.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -439,9 +439,7 @@
         </div>
     </footer>
     <!-- End Footer -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/all.min.js"></script>
-    <script src="js/bondi.js"></script>
+    <script src="./bondi/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
